nginx-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-service
  labels:
    app: web
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: nginx
        image: nginx:1.23.3-alpine-slim
        ports:
        - containerPort: 80
          name: nginx-http

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-clusterip
spec:
  selector:
    app: web
  ports:
  - name: nginx-port
    protocol: TCP
    port: 80
    targetPort: nginx-http
